--- a/stranger/pubspec.yaml
+++ b/stranger/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Base
+  intl: ^0.17.0
+  flutter_vector_icons: ^1.0.0
+  google_fonts: ^2.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
