--- a/stranger/pubspec.yaml
+++ b/stranger/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   flutter_vector_icons: ^1.0.0
   google_fonts: ^2.1.0
 
+  # IMAGES
+  cached_network_image: ^3.1.0
+  image_picker: ^0.8.1+3
+  file_picker: ^3.0.1
+  photo_view: ^0.12.0
+  card_swiper: ^1.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +68,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - image/drstrange.jpg
+    - image/ic_app_icon.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
