--- a/stranger/pubspec.yaml
+++ b/stranger/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
 
   # Base
+  cupertino_icons: ^1.0.3
+  nb_utils: ^4.4.8
   intl: ^0.17.0
   flutter_vector_icons: ^1.0.0
   google_fonts: ^2.1.0
@@ -42,10 +44,6 @@ dependencies:
   photo_view: ^0.12.0
   card_swiper: ^1.0.2
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   flutter_redux: ^0.10.0
 
 dev_dependencies:
