--- a/stranger/pubspec.yaml
+++ b/stranger/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   card_swiper: ^1.0.2
 
   flutter_redux: ^0.10.0
+  dotted_border: ^2.0.0+2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
   assets:
     - image/drstrange.jpg
     - image/ic_app_icon.png
+    - image/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
