--- a/stranger/pubspec.yaml
+++ b/stranger/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_redux: ^0.10.0
   redux_saga : ^3.0.6
   dotted_border: ^2.0.0+2
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
